<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大胖外卖</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contentDescribe">contentDescribe</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_register_link">注册</string>
    <string name="title_activity_signup">Signup</string>
    <string name="telnumber">手机号</string>
    <string name="signup_hint">手机号</string>
    <string name="signup_label_password">密码</string>
    <string name="signup_label_signin">注册</string>
    <string name="password_hint">6-18数字或字母</string>
    <string name="title_activity_main_page">定位</string>
    <string name="menu_list">外卖</string>
    <string name="order_list">订单</string>
    <string name="MyInfo">我的</string>
    <string name="manage_address">管理配送地址</string>
    <string name="leftmoney">余额</string>
    <string name="coupon">我的优惠券</string>
    <string name="feedback">意见反馈</string>
    <string name="telphone">客服电话</string>
    <string name="checkupdate">检查更新</string>
    <string name="about">关于</string>
    <string name="ManageReveiverInfo">管理收货人地址</string>
    <string name="addReceiverInfo">添加收货人信息</string>
    <string name="title_activity_receiver_address">ReceiverAddress</string>
    <string name="confirm_add">确认添加</string>
    <string name="addresstab">地址</string>
    <string name="teltab">电话</string>
    <string name="addAddressInfo">添加收件人地址</string>
    <string name="title_activity_add_receiver_address">AddReceiverAddress</string>
    <string name="myInfo">我的账户</string>
    <string name="username">用户名</string>
    <string name="bindingtelnumber">绑的手机号</string>
    <string name="change_password">修改密码</string>
    <string name="log_out">退出登录</string>
    <string name="title_activity_my_info_page">MyInfoPage</string>
    <string name="title_activity_change_username_page">ChangeUsernamePage</string>
    <string name="requirements">请以中文或英文字母开头，仙4-16个字符，一个汉字相当于两个字符</string>
    <string name="confirm">确定</string>
    <string name="title_activity_chnage_password_page">ChnagePasswordPage</string>
    <string name="orinal_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="search_edit_hint"></string>
    <string name="default_order">默认排序</string>
    <string name="all_kinds_taste">全部口味</string>
    <string name="special_offer">优惠活动</string>
    <string name="title_activity_shop_page">ShopPage</string>
    <string name="title_activity_classify_menu_fragment">ClassifyMenuFragment</string>
    <string name="classify_menu">菜单分类</string>
    <string name="shop_introduction">餐厅介绍</string>
    <string name="title_activity_baidu_map">BaiduMap</string>
    <string name="shop_phone">餐厅电话</string>
    <string name="shop_address">餐厅地址</string>
    <string name="shop_Introduction">餐厅简介</string>
    <string name="shop_time">营业时间</string>
    <string name="collect">收藏</string>
    <string name="review_grade">用户评分</string>
    <string name="arrvive_time">送达/分钟</string>
    <string name="diliver_price">起送价/元</string>
    <string name="diliver_fee">配送费/元</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="header">Header %d</string>
    <string name="title_activity_confirm_food_page">ConfirmFoodPage</string>
    <string name="confirm_food">确认美食</string>
</resources>
