<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChnagePasswordPage" 
    android:orientation="vertical">
     <EditText 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/orinal_password"
         android:layout_marginTop="10dp"
         />
     <EditText 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/new_password"
          android:layout_marginTop="10dp"
         />
     <EditText 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/confirm_new_password"
         android:layout_marginTop="10dp"
         />
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:background="#FF9900"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp">
         <TextView 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/confirm"
          android:gravity="center"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:textSize="25sp"
              />
          
      </LinearLayout>
</LinearLayout>
