<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    >  
    <!-- 
        android:background="@drawable/background_login"
        padding 内边距   layout_margin 外边距  
        android:layout_alignParentTop 布局的位置是否处于顶部 -->           
    <RelativeLayout   
        android:id="@+id/login_div"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:padding="15dip"          
        android:layout_margin="15dip"   
         >  
        <!-- 账号  android:background="@drawable/background_login_div_bg" -->  
        <TextView   
            android:id="@+id/signup_user_input"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_alignParentTop="true"  
            android:layout_marginTop="5dp"  
            android:text="@string/telnumber"  
           />  
        <EditText   
            android:id="@+id/telnumer_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:hint="@string/signup_hint"  
            android:layout_below="@id/signup_user_input"  
            android:singleLine="true"  
            android:inputType="text"/>  
        <!-- 密码 text  android:background="@drawable/blue_button" -->  
        <TextView   
            android:id="@+id/signup_password_input"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/telnumer_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/signup_label_password"  
            />  
        <EditText   
            android:id="@+id/password_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/signup_password_input" 
            android:hint="@string/password_hint"   
            android:password="true"  
            android:singleLine="true"  
            android:inputType="textPassword" />  
        <!-- 登录button -->  
        <Button   
            android:id="@+id/signup_button"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/password_edit"  
            android:layout_alignRight="@id/password_edit"  
            android:text="@string/signup_label_signin"  
             />  
    </RelativeLayout> 
    
</LinearLayout>  

